--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>appium</groupId>
-  <artifactId>appium_keyword</artifactId>
+  <groupId>selenium</groupId>
+  <artifactId>selenium_keyword</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>appium_keyword</name>
+  <name>selenium_keyword</name>
   <url>http://maven.apache.org</url>
 
   <properties>
