--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 	    <artifactId>selenium-java</artifactId>
 	    <version>3.8.1</version>
 	</dependency>
-		
+	<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+	<dependency>
+	    <groupId>io.github.bonigarcia</groupId>
+	    <artifactId>webdrivermanager</artifactId>
+	    <version>2.1.0</version>
+	</dependency>
   </dependencies>
 </project>
